Normalize Play Store search result icons

Apply MD icon normalizer to icons returned by Play Store search
to ensure that the they are roughly the same size as regular app icons.

Bug: 900685
Test: manual
Change-Id: I1960397c1ef3179590cccaac4fd69176849bce17
Reviewed-on: https://chromium-review.googlesource.com/c/1310915
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Commit-Queue: Vladislav Kaznacheev <kaznacheev@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604576}
Former-commit-id: 84de1c5540bb45fdfce5f8da6dbe738c4aaa69af